--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,13 +76,13 @@ date.format=yyyy-MM-dd
 # application.log.system.out=off
 
 # Database configuration
-# ~~~~~ 
+# ~~~~~
 # Enable a database engine if needed.
 #
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-# db=mem
+db=mem
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
